💄 Fix no wrap Beta banner (#261)
* 💄 Fix no wrap Beta banner

* Fix Beta + banner with minimal overrides

--- a/public/stylesheets/app/_header.scss
+++ b/public/stylesheets/app/_header.scss
@@ -1,7 +1,8 @@
 // 'pac' prefix used for custom styles to prevent collisions
+
 .pac-phase-tag {
   position: relative;
-  top: 3px;
+  top: 1px;
   margin-left: 2px;
 }
 
